--- a/components/views/Slider/index.less
+++ b/components/views/Slider/index.less
@@ -19,7 +19,7 @@
     height: 18px;
     width: 18px;
     border-radius: 12px;
-    background: #403d39;
+    background: @secondary;
     cursor: pointer;
     -webkit-appearance: none;
     margin-top: -6.95px;
@@ -40,7 +40,7 @@
     height: 18px;
     width: 18px;
     border-radius: 12px;
-    background: #403d39;
+    background: @secondary;
     cursor: pointer;
   }
 
@@ -56,7 +56,7 @@
     height: 23px;
     width: 23px;
     border-radius: 12px;
-    background: #403d39;
+    background: @secondary;
     cursor: pointer;
   }
 }
