--- a/components/views/EditorImageViewer/index.less
+++ b/components/views/EditorImageViewer/index.less
@@ -1,7 +1,7 @@
 .EditorImageViewer {
-  #imagePreview {
-    height: 60vh;
+  max-height: 60vh;
 
+  #imagePreview {
     img {
       max-width: 100%; 
       max-height: 60vh;
@@ -9,6 +9,7 @@
     
     canvas {
       max-height: 60vh;
+      width: 100%;
     }
   }
 
