make site background slightly darker

--- a/index.less
+++ b/index.less
@@ -3,6 +3,10 @@
 @secondary: #403d39;
 
 /* Global Styles */
+body {
+    background: whitesmoke;
+}
+
 h1, h2, h3, h4, h5, h6, p, span {
     font-family: 'Open Sans', sans-serif !important;
     color: @secondary !important;
