--- a/components/views/EditorControls/index.less
+++ b/components/views/EditorControls/index.less
@@ -1,3 +1,18 @@
-input#userImg {
-  display: none;
+.EditorControls {
+  input#userImg {
+    display: none;
+  }
+
+  .controls-group {
+    height: 60vh;
+    display: flex;
+    justify-content: space-evenly;
+    background: white;
+    border: none;
+    box-shadow: none;
+
+    .segment {
+      border: none;
+    }
+  }
 }
