--- a/components/views/EditorImageViewer/index.less
+++ b/components/views/EditorImageViewer/index.less
@@ -2,6 +2,13 @@
   max-height: 60vh;
 
   #imagePreview {
+    height: 60vh;
+    align-items: center;
+    display: flex;
+    border: none;
+    box-shadow: none;
+    justify-content: center;
+
     img {
       max-width: 100%; 
       max-height: 60vh;
@@ -9,17 +16,26 @@
     
     canvas {
       max-height: 60vh;
-      width: 100%;
+      max-width: 100%;
     }
   }
 
   #zeroState {
     height: 60vh;
+    box-shadow: none;
+    border: none;
+    background: white;
 
     .header {
       &:before {
         display: none
       }
     }
+  }
+}
+
+@media (max-width: 767px) {
+  #imagePreview, .controls-group {
+    height: auto !important;
   }
 }
