import polygon font face

--- a/index.less
+++ b/index.less
@@ -2,6 +2,11 @@
 @primary: #F45B69;
 @secondary: #403d39;
 
+@font-face { 
+	font-family: 'polygon';
+	src: url('assets/aroly-webfont.woff') format('woff'),
+}
+
 /* Global Styles */
 body {
     background: whitesmoke;
