change polyframe title to use polygon font

--- a/components/pages/Editor/index.less
+++ b/components/pages/Editor/index.less
@@ -1,6 +1,8 @@
 .Editor {
   .header.title {
     font-size: 3em !important;
+    font-family: 'polygon', 'Open Sans', sans-serif !important;
+    margin: 0;
   }
   
   .header.subtitle {
