remove shadows and border from zero state box

--- a/components/views/EditorImageViewer/index.less
+++ b/components/views/EditorImageViewer/index.less
@@ -22,9 +22,9 @@
 
   #zeroState {
     height: 60vh;
-    box-shadow: none;
-    border: none;
-    background: white;
+    box-shadow: none !important;
+    border: none !important;
+    background: white !important;
 
     .header {
       &:before {
