update app component import paths

--- a/index.less
+++ b/index.less
@@ -33,8 +33,8 @@ h1, h2, h3, h4, h5, h6, p, span {
     display: none !important;
 }
 
+@import './components/App/index.less';
 @import './components/pages/Editor/index.less';
-@import './components/pages/Home/index.less';
 @import './components/views/EditorControls/index.less';
 @import './components/views/EditorImageViewer/index.less';
 @import './components/views/Slider/index.less';
