update path to font

--- a/index.less
+++ b/index.less
@@ -4,7 +4,7 @@
 
 @font-face { 
 	font-family: 'polygon';
-	src: url('assets/aroly-webfont.woff') format('woff'),
+	src: url('assets/fonts/aroly-webfont.woff') format('woff'),
 }
 
 /* Global Styles */
